[tool.poetry]
name = "pytest"
version = "0.1.0"
description = ""
authors = ["GitHubYone <tkw_yoneta@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
opencv-python = "^4.7.0.72"
icecream = "^2.1.3"
pillow = "^10.3.0"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
